fixed element overlapping

--- a/src/style/menu_cards.css
+++ b/src/style/menu_cards.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 6.4%;
+  top: 3.5rem;
 }
 
 .card {
@@ -72,7 +72,7 @@
 
 .levels-button.large {
   width: 100%;
-  max-width: 4.3rem;
+  max-width: 3.8rem;
 }
 
 .modern-dropdown {
