--- a/src/style/sidebar.css
+++ b/src/style/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
   display: flex;
-  width: 23rem;
+  width: 21rem;
   height: 100%;
   background-color: rgb(1, 116, 116);
   box-shadow: 2px 0px 5px 1px rgba(1, 89, 116, 0.7);
